# CueForge

./: .gitignore  build_native.bat  download_individual.bat  main.js  package.json  preload.js  settings.json  setup_juce.js
native/: CMakeLists.txt  build_windows.bat
native/bridge/: audio_bridge.cpp  audio_bridge.h  binding.gyp
native/include/: AudioCue.h  AudioEngine.h  CommandProcessor.h  MatrixMixer.h  OutputPatch.h
native/src/: AudioCue.cpp  AudioEngine.cpp  CommandProcessor.cpp  MatrixMixer.cpp  OutputPatch.cpp
src/: display.html  index.html  styles.css
src/api/: audio-engine-api.js
src/js/: app.js  audio-analyzer.js  audio-cue-enhanced.js  audio-cue.js  audio-dropout-detector.js  audio-effects-manager.js  audio-effects.js  audio-engine-native.js  audio-engine-professional.js  audio-engine.js  audio-fade-automation.js  audio-output-patch.js  audio-patch-manager.js  audio-performance-monitor.js  audio-recovery-manager.js  audio-worklet-processor.js  cue-manager.js  display-manager.js  matrix-mixer-enhanced.js  matrix-mixer-ui.js  media-browser.js  memory-leak-monitor.js  professional-audio-manager.js  ui-manager.js  video-engine.js  video-timeline.js  vst-integration.js  waveform-renderer.js
src/tests/: audio-engine-tests.js  performance.benchmarks.js
